--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "PYTHONDONTWRITEBYTECODE",
         "PYTHONPATH",
         "PYTHONUNBUFFERED",
+        "signup",
         "starlette",
         "uvicorn",
         "zamerick"
