--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -2,6 +2,9 @@
     "cSpell.words": [
         "debugpy",
         "mypy",
-        "pytest"
+        "pytest",
+        "setex",
+        "zadd",
+        "ZRANGE"
     ]
 }
