--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -9,3 +9,10 @@ services:
     env_file:
       - ./.env
     restart: unless-stopped
+
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
