--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -10,6 +10,13 @@ services:
       - ./.env
     restart: unless-stopped
 
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+
   caddy:
     container_name: caddy
     build:
