--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,12 @@
         "PYTHONDONTWRITEBYTECODE",
         "PYTHONPATH",
         "PYTHONUNBUFFERED",
+        "setex",
         "signup",
         "starlette",
         "uvicorn",
-        "zamerick"
+        "zadd",
+        "zamerick",
+        "zrange"
     ]
 }
