last readme updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "charliermarsh",
         "coloredlogs",
         "debugpy",
+        "Ethyca's",
         "fastapi",
         "humao",
         "mypy",
